# zephyr

boards/arm/nrf52_keyfob/: Kconfig.board  Kconfig.defconfig  board.cmake  nrf52_keyfob-pinctrl.dtsi  nrf52_keyfob.dts  nrf52_keyfob.yaml  nrf52_keyfob_defconfig  pre_dt_board.cmake
drivers/flash/: flash_native_posix.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/kx022/: CMakeLists.txt  Kconfig  kx022.c  kx022.h  kx022_i2c.c  kx022_spi.c
drivers/sensor/kx022/test/: CMakeLists.txt  Kconfig  prj.conf
drivers/sensor/kx022/test/src/: main.c
dts/bindings/sensor/: kionix,kx022-i2c.yaml  kionix,kx022.yaml
include/settings/: settings.h
samples/sensor/accel_polling/: prj.conf
scripts/: sanitycheck
subsys/settings/src/: settings.c
tests/subsys/settings/functional/src/: settings_basic_test.c
